--- a/2. Clustering and PCA/model.ipynb
+++ b/2. Clustering and PCA/model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <Center> **Лабораторна робота №2 - Оліярник Софія** </Center> "
+    "### <Center> **Clustering and PCA** </Center> "
    ]
   },
   {
